# tee_tee_client

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  ohos.build
build_armpc/armpc/: Makefile  flags.mk
frameworks/include/: tc_ns_client.h  tee_client_inner.h  tee_client_list.h  tee_file.h  tee_hilog.h  tee_hilog_lock.h  tee_log.h  tee_sys_log.h
frameworks/include/lite/: tee_default_path.h  tee_ioctl_cmd.h
frameworks/include/standard/: tee_default_path.h  tee_ioctl_cmd.h
frameworks/include/standard/teec_system/: tee_default_path.h
frameworks/include/standard/teec_vendor/: tee_default_path.h
frameworks/libteec_client/: tee_client.cpp  tee_client.h
frameworks/libteec_vendor/: load_sec_file.c  load_sec_file.h  tee_client_api.c  tee_client_app_load.c  tee_client_app_load.h  tee_client_inner_api.h  tee_client_socket.c  tee_client_socket.h
frameworks/tee_file/: tee_file.c
interfaces/inner_api/: tee_client_api.h  tee_client_constants.h  tee_client_ext_api.h  tee_client_type.h
interfaces/inner_api/libteec_vendor/: tee_client_ext_api.h
interfaces/kits/c/: BUILD.gn  libteec.ndk.json
interfaces/kits/c/include/: tee_client_api.h  tee_client_constants.h  tee_client_type.h
interfaces/kits/c/src/: tee_client.cpp  tee_client.h
interfaces/libteec/: tee_client_api.h  tee_client_constants.h  tee_client_ext_api.h  tee_client_type.h
services/authentication/: tcu_authentication.c  tcu_authentication.h  tee_auth_common.c  tee_auth_common.h  tee_auth_system.cpp  tee_auth_system.h  tee_get_native_cert.c  tee_get_native_cert.h
services/taversion_ctrl/: tee_ta_version_ctrl.c  tee_ta_version_ctrl.h
services/teecd/include/: fs_work_agent.h  late_init_agent.h  misc_work_agent.h  secfile_load_agent.h  tee_agent.h  tee_ca_auth.h  tee_ca_daemon.h  tee_load_dynamic.h  tee_load_dynamic_drv.h
services/teecd/src/: fs_work_agent.c  late_init_agent.c  misc_work_agent.c  secfile_load_agent.c  tee_agent.c  tee_ca_auth.c  tee_ca_daemon.c  tee_load_dynamic.c  tee_load_dynamic_drv.c
services/tlogcat/include/: proc_tag.h  sys_log_api.h  tarzip.h  tlogcat.h
services/tlogcat/src/: proc_tag.c  sys_hilog_cfg.c  sys_syslog_cfg.c  tarzip.c  tlogcat.c
test/fuzztest/libteecvendor/: BUILD.gn
test/fuzztest/libteecvendor/libteecvendorallocatesharedmemory_fuzzer/: BUILD.gn  libteecvendorallocatesharedmemory_fuzzer.cpp  libteecvendorallocatesharedmemory_fuzzer.h
test/fuzztest/libteecvendor/libteecvendorallocatesharedmemory_fuzzer/corpus/: init
test/fuzztest/libteecvendor/libteecvendorclosesession_fuzzer/: BUILD.gn  libteecvendorclosesession_fuzzer.cpp  libteecvendorclosesession_fuzzer.h
test/fuzztest/libteecvendor/libteecvendorfinalizecontext_fuzzer/: BUILD.gn  libteecvendorfinalizecontext_fuzzer.cpp  libteecvendorfinalizecontext_fuzzer.h
test/fuzztest/libteecvendor/libteecvendorinitializecontext_fuzzer/: BUILD.gn  libteecvendorinitializecontext_fuzzer.cpp  libteecvendorinitializecontext_fuzzer.h
test/fuzztest/libteecvendor/libteecvendorinvokecommand_fuzzer/: BUILD.gn  libteecvendorinvokecommand_fuzzer.cpp  libteecvendorinvokecommand_fuzzer.h
test/fuzztest/libteecvendor/libteecvendoropensession_fuzzer/: BUILD.gn  libteecvendoropensession_fuzzer.cpp  libteecvendoropensession_fuzzer.h
test/fuzztest/libteecvendor/libteecvendorregistersharedmemory_fuzzer/: BUILD.gn  libteecvendorregistersharedmemory_fuzzer.cpp  libteecvendorregistersharedmemory_fuzzer.h
test/fuzztest/libteecvendor/libteecvendorreleasesharedmemory_fuzzer/: BUILD.gn  libteecvendorreleasesharedmemory_fuzzer.cpp  libteecvendorreleasesharedmemory_fuzzer.h
test/fuzztest/libteecvendor/libteecvendorrequestcancellation_fuzzer/: BUILD.gn  libteecvendorrequestcancellation_fuzzer.cpp  libteecvendorrequestcancellation_fuzzer.h  project.xml
test/fuzztest/libteecvendor/libteecvendorteecextapi_fuzzer/: BUILD.gn  libteecvendorteecextapi_fuzzer.cpp  libteecvendorteecextapi_fuzzer.h
test/fuzztest/teeclient/: BUILD.gn
test/fuzztest/teeclient/teeclientallocatesharedmemory_fuzzer/: BUILD.gn  teeclientallocatesharedmemory_fuzzer.cpp  teeclientallocatesharedmemory_fuzzer.h
test/fuzztest/teeclient/teeclientclosesession_fuzzer/: BUILD.gn  teeclientclosesession_fuzzer.cpp  teeclientclosesession_fuzzer.h
test/fuzztest/teeclient/teeclientfinalizecontext_fuzzer/: BUILD.gn  teeclientfinalizecontext_fuzzer.cpp  teeclientfinalizecontext_fuzzer.h
test/fuzztest/teeclient/teeclientinitializecontext_fuzzer/: BUILD.gn  teeclientinitializecontext_fuzzer.cpp  teeclientinitializecontext_fuzzer.h
test/fuzztest/teeclient/teeclientinvokecommand_fuzzer/: BUILD.gn  teeclientinvokecommand_fuzzer.cpp  teeclientinvokecommand_fuzzer.h
test/fuzztest/teeclient/teeclientonremoterequest_fuzzer/: BUILD.gn  teeclientonremoterequest_fuzzer.cpp  teeclientonremoterequest_fuzzer.h
test/fuzztest/teeclient/teeclientopensession_fuzzer/: BUILD.gn  teeclientopensession_fuzzer.cpp  teeclientopensession_fuzzer.h
test/fuzztest/teeclient/teeclientregistersharedmemory_fuzzer/: BUILD.gn  teeclientregistersharedmemory_fuzzer.cpp  teeclientregistersharedmemory_fuzzer.h
test/fuzztest/teeclient/teeclientreleasesharedmemory_fuzzer/: BUILD.gn  teeclientreleasesharedmemory_fuzzer.cpp  teeclientreleasesharedmemory_fuzzer.h
test/fuzztest/teeclient/teeclientrequestcancellation_fuzzer/: BUILD.gn  teeclientrequestcancellation_fuzzer.cpp  teeclientrequestcancellation_fuzzer.h
test/fuzztest/teeclient/teeclientsocket_fuzzer/: BUILD.gn  teeclientsocket_fuzzer.cpp  teeclientsocket_fuzzer.h
test/unittest/: BUILD.gn  authenticationtest.cpp  cadaemontest.cpp  dlopenteectest.cpp  loadsecfiletest.cpp  stubMock.cpp  stubMock.h  teecvendortest.cpp  tuidaemontest.cpp
test/unittest/authenticationtest_stub/: accesstoken_kit.cpp  if_system_ability_manager.cpp  ipc_skeleton.cpp  iservice_registry.cpp
test/unittest/authenticationtest_stub/include/: accesstoken_kit.h  bundle_mgr_interface.h  bundle_mgr_mini_proxy.h  bundle_mgr_stub.h  if_system_ability_manager.h  ipc_skeleton.h  iservice_registry.h  system_ability_definition.h
(+21 files in other folders)
