# Copyright (C) 2022 Huawei Technologies Co., Ltd.
# Licensed under the Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#     http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
# PURPOSE.
# See the Mulan PSL v2 for more details.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

config("exported_header_files") {
    include_dirs = [
        "//base/tee/tee_client/interfaces/kits/c/include",
    ]
}

ohos_shared_library("libteec") {
    part_name = "tee_client"
    subsystem_name = "tee"
    output_extension = "so"

    sources = [
        "src/tee_client.cpp",
    ]

    include_dirs = [
        "src/",
        "//base/tee/tee_client/interfaces/kits/c/include",
        "//base/tee/tee_client/interfaces/inner_api/libteec_vendor",
        "//base/tee/tee_client/frameworks/include",
        "//base/tee/tee_client/frameworks/include/standard/teec_system/",
        "//base/tee/tee_client/frameworks/include/standard/",
        "//base/tee/tee_client/frameworks/libteec_vendor/",
        "//base/tee/tee_client/frameworks/authentication",
    ]

    deps = [
        "//third_party/bounds_checking_function:libsec_shared",
    ]

    external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
        "ipc:ipc_core",
        "safwk:system_ability_fwk",
        "samgr:samgr_proxy",
    ]

    ldflags = [
        "-Wl,-z,max-page-size=4096",
        "-Wl,-z,separate-code",
    ]
    public_configs = [ ":exported_header_files" ]
}
