# Copyright (C) 2022 Huawei Technologies Co., Ltd.
# Licensed under the Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#     http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
# PURPOSE.
# See the Mulan PSL v2 for more details.

group("libteec_vendor_fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "libteecvendorallocatesharedmemory_fuzzer:LibteecVendorAllocateSharedMemoryFuzzTest",
    "libteecvendorclosesession_fuzzer:LibteecVendorCloseSessionFuzzTest",
    "libteecvendorfinalizecontext_fuzzer:LibteecVendorFinalizeContextFuzzTest",
    "libteecvendorinitializecontext_fuzzer:LibteecVendorInitializeContextFuzzTest",
    "libteecvendorinvokecommand_fuzzer:LibteecVendorInvokeCommandFuzzTest",
    "libteecvendoropensession_fuzzer:LibteecVendorOpenSessionFuzzTest",
    "libteecvendorregistersharedmemory_fuzzer:LibteecVendorRegisterSharedMemoryFuzzTest",
    "libteecvendorreleasesharedmemory_fuzzer:LibteecVendorReleaseSharedMemoryFuzzTest",
    "libteecvendorrequestcancellation_fuzzer:LibteecVendorRequestCancellationFuzzTest",
    "libteecvendorteecextapi_fuzzer:LibteecVendorTeecExtApiFuzzTest",
  ]
}
