# Copyright (C) 2022 Huawei Technologies Co., Ltd.
# Licensed under the Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#     http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
# PURPOSE.
# See the Mulan PSL v2 for more details.

component_type = ""
if (defined(global_parts_info) && defined(global_parts_info.bundle_framework) &&
    global_parts_info.bundle_framework) {
  component_type = "system"
}
group("fuzztest") {
  testonly = true
  deps = []

  if (component_type == "system") {
    deps += [
      # deps file
      "teeclientallocatesharedmemory_fuzzer:TeeClientAllocateSharedMemoryFuzzTest",
      "teeclientclosesession_fuzzer:TeeClientCloseSessionFuzzTest",
      "teeclientfinalizecontext_fuzzer:TeeClientFinalizeContextFuzzTest",
      "teeclientinitializecontext_fuzzer:TeeClientInitializeContextFuzzTest",
      "teeclientinvokecommand_fuzzer:TeeClientInvokeCommandFuzzTest",
      "teeclientonremoterequest_fuzzer:TeeClientOnRemoteRequestFuzzTest",
      "teeclientopensession_fuzzer:TeeClientOpenSessionFuzzTest",
      "teeclientregistersharedmemory_fuzzer:TeeClientRegisterSharedMemoryFuzzTest",
      "teeclientreleasesharedmemory_fuzzer:TeeClientReleaseSharedMemoryFuzzTest",
      "teeclientrequestcancellation_fuzzer:TeeClientRequestCancellationFuzzTest",
      "teeclientsocket_fuzzer:TeeClientSocketFuzzTest",
    ]
  }
}
