# Copyright (C) 2022 Huawei Technologies Co., Ltd.
# Licensed under the Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#     http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
# PURPOSE.
# See the Mulan PSL v2 for more details.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "tee_client/tee_client"

##############################fuzztest##########################################
ohos_fuzztest("TeeClientRequestCancellationFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "../teeclientrequestcancellation_fuzzer"
  include_dirs = [
    "../../../../interfaces/inner_api",
    "../../../../frameworks/libteec_vendor",
    "../../../../services/authentication",
    "../../../../frameworks/include",
    "../../../../frameworks/include/standard",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "teeclientrequestcancellation_fuzzer.cpp" ]

  deps = [
    "../../../../frameworks/build/standard:libteec",
    "../../../../frameworks/build/standard:libteec_vendor",
  ]
  external_deps = [ "hilog:libhilog" ]
}
